--- a/app/scripts/components/hakemusSummary/index.styl
+++ b/app/scripts/components/hakemusSummary/index.styl
@@ -16,8 +16,7 @@
 .hakemus-summary__not-active
   padding-top: 40%
 
-
-.hakemus-summary__hakuajat
+.hakemus_summary__hakuajat
   position: absolute
   width: 100%
   bottom: 0
@@ -25,6 +24,11 @@
   padding: 1em
   padding-bottom: 1em
 
+.edit_mode
+  background: #f5f5f5
+
+.glyphicon-remove
+  float: right
 
 .hakuajat__button
   margin-top: 0.5em
