LIVIJUKU-504: Päätetty-tilassa olevan "hakemuslaatikoiden" korkeus pienemmäksi.

--- a/app/scripts/components/hakemuskausiPanel/index.styl
+++ b/app/scripts/components/hakemuskausiPanel/index.styl
@@ -1,4 +1,7 @@
 .hakemuskausi-panel
-  height: 460px
   text-align: center
   position: relative
+.hakemuskausi-panel_auki
+  height: 460px
+.hakemuskausi-panel_suljettu
+  height: 300px
