--- a/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
+++ b/app/scripts/views/kasittelija/hakemuskaudenHallinta.html
@@ -25,7 +25,7 @@
         </p>
       </div>
       <div class="col-md-3" ng-repeat="tyyppitunnus in constants.hakemustyypit">
-        <hakemuskausi-panel
+        <hakemuskausi-panel class="hakemuskausi-panel_auki"
           inactive="!utils.hakemusKaynnissa(utils.haeHakemus(hakemuskausi, tyyppitunnus))"
           title="{{tyyppitunnus | toApplicationName}}"
           ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppitunnus})">
@@ -68,7 +68,7 @@
         </p>
       </div>
       <div class="col-md-3" ng-repeat="tyyppitunnus in constants.hakemustyypit">
-        <hakemuskausi-panel
+        <hakemuskausi-panel class="hakemuskausi-panel_auki"
           inactive="!utils.hakemusKaynnissa(utils.haeHakemus(hakemuskausi, tyyppitunnus))"
           title="{{tyyppitunnus | toApplicationName}}"
           ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppitunnus})">
@@ -98,7 +98,7 @@
         </p>
       </div>
       <div class="col-md-3" ng-repeat="tyyppitunnus in constants.hakemustyypit">
-        <hakemuskausi-panel
+        <hakemuskausi-panel class="hakemuskausi-panel_suljettu"
           inactive="!utils.hakemusKaynnissa(utils.haeHakemus(hakemuskausi, tyyppitunnus))"
           title="{{tyyppitunnus | toApplicationName}}"
           ui-sref="app.yhteinen.hakemukset.list({tyyppi: tyyppitunnus})">
