--- a/app/scripts/components/hakemusSummary/index.html
+++ b/app/scripts/components/hakemusSummary/index.html
@@ -25,8 +25,8 @@
 
     <div ng-if="!hakemuskausiSuljettu()">
       <div ng-if="!editing">
-        <a href="#" ng-click="toggleEditMode($event)"
-           id="{{ 'test-muokkaa-hakuaikoja-' + testIdIndex }}">
+        <a href="#" ng-click="setEditMode($event)"
+           id="{{ 'test-muokkaa-hakuaikoja-' + kausiId }}">
           <p>Hakuaika:</p>
           <i class="glyphicon glyphicon-pencil hakemus-summary__edit"></i>
           {{hakemus.hakuaika.alkupvm | date:'d.M.yyyy'}} -
@@ -43,7 +43,7 @@
         <div class="input-group hakuajat_input juku-datepicker"
              tooltip="Alkamispäivämäärän tulee olla ennen loppumispäivämäärää."
              tooltip-trigger="mouseover"
-             id="{{ 'test-alkupvm-datepicker-' + testIdIndex }}"
+             id="{{ 'test-alkupvm-datepicker-' + kausiId }}"
              tooltip-enable="hakuaikaForm.$error.validDateOrder">
 
           <input name="alkupvm"
@@ -62,7 +62,7 @@
             <button
               type="button"
               class="btn btn-default hakuajat_calendar"
-              id="{{ 'test-alkupvm-datepicker-button-' + testIdIndex }}"
+              id="{{ 'test-alkupvm-datepicker-button-' + kausiId }}"
               ng-click="toggleCalendarAlkupvm($event)">
               <i class="glyphicon glyphicon-calendar"></i>
             </button>
@@ -70,7 +70,7 @@
         </div>
 
         <div class="input-group hakuajat_input juku-datepicker"
-             id="{{ 'test-loppupvm-datepicker-' + testIdIndex }}">
+             id="{{ 'test-loppupvm-datepicker-' + kausiId }}">
 
           <input name="loppupvm"
                  type="text"
@@ -88,7 +88,7 @@
             <button
               type="button"
               class="btn btn-default hakuajat_calendar"
-              id="{{ 'test-loppupvm-datepicker-button-' + testIdIndex }}"
+              id="{{ 'test-loppupvm-datepicker-button-' + kausiId }}"
               ng-click="toggleCalendarLoppupvm($event)">
               <i class="glyphicon glyphicon-calendar"></i>
             </button>
@@ -102,7 +102,7 @@
         <button
           ng-disabled="hakuaikaForm.$invalid"
           ng-click="save($event)"
-          id="{{ 'test-alkupvm-tallenna-' + testIdIndex }}"
+          id="{{ 'test-alkupvm-tallenna-' + kausiId }}"
           class="btn btn-primary hakuajat__button">
           Tallenna hakuajat
         </button>
