LIVIJUKU-525: Taulukoiden sorttaus: ikonit irti edessäolevasta tekstistä, kolmio alaspäin -ikoni on vääristynyt

--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -231,9 +231,11 @@ textarea
   cursor: pointer
 
 .st-sort-ascent:after
+  margin-left: 5px
   content: '\25B2'
 
 .st-sort-descent:after
+  margin-left: 5px
   content: '\25BC'
 
 .table-hover tr {
