--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -59,15 +59,15 @@
           </thead>
           <tbody>
           <tr ng-repeat="hakemus in hakemuksetSuunnittelu">
-            <td>{{hakemus.hakija}}</td>
-            <td>
+            <td ng-click="siirryHakemukseen(hakemus)">{{hakemus.hakija}}</td>
+            <td ng-click="siirryHakemukseen(hakemus)">
               <hakemus-label tila="{{hakemus.hakemuksenTila}}"></hakemus-label>
             </td>
-            <td>
+            <td ng-click="siirryHakemukseen(hakemus)">
               <div ng-hide="hakemusKeskenerainen(hakemus)">{{hakemus.haettuAvustus|currency:"&euro;"}}</div>
               <div ng-show="hakemusKeskenerainen(hakemus)">Ei tiedossa</div>
             </td>
-            <td>
+            <td ng-click="siirryHakemukseen(hakemus)">
               <div ng-hide="hakemusKeskenerainen(hakemus)">{{hakemus.muutos|currency:"&euro;"}}</div>
             </td>
             <td>
