--- a/app/scripts/components/formInput/input-compact.html
+++ b/app/scripts/components/formInput/input-compact.html
@@ -1,5 +1,5 @@
 <div class="form-group"
-     tooltip="{{tooltipText()}}"
+     uib-tooltip="{{tooltipText()}}"
      tooltip-placement="top"
      tooltip-enable="input().$invalid">
 
