--- a/app/scripts/components/seuranta/liikenne/index.html
+++ b/app/scripts/components/seuranta/liikenne/index.html
@@ -5,44 +5,44 @@
         <th class="col-md-2">Suoritetyyppi</th>
         <th class="col-md-2">Suoritteen nimi</th>
         <th>
-          <div tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
+          <div uib-tooltip="Linja-autojen lukumäärä" tooltip-placement="top"
                tooltip-append-to-body="true">
             Linja-autot&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
-          <div tooltip="Taksien lukumäärä" tooltip-placement="top"
+          <div uib-tooltip="Taksien lukumäärä" tooltip-placement="top"
                tooltip-append-to-body="true">
             Taksit&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
-          <div tooltip="Paikallisliikenteen ajokilometrit"
+          <div uib-tooltip="Paikallisliikenteen ajokilometrit"
                tooltip-append-to-body="true">
             Ajo&shy;matkat&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
-          <div tooltip="Paikallisliikenteen matkustajamäärä" tooltip-placement="top"
+          <div uib-tooltip="Paikallisliikenteen matkustajamäärä" tooltip-placement="top"
                tooltip-append-to-body="true">
             Matkus&shy;tajat&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
-          <div tooltip="Saadut matkalipputulot" tooltip-placement="top"
+          <div uib-tooltip="Saadut matkalipputulot" tooltip-placement="top"
                tooltip-append-to-body="true">
             Lippu&shy;tulo&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
-          <div tooltip="Kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
+          <div uib-tooltip="Kaupungin liikennöitsijöille maksama hinta, sisältää valtionavun"
                tooltip-placement="top"
                tooltip-append-to-body="true">
             Netto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
         </th>
         <th>
-          <div tooltip="Lipputulo + nettohinta" tooltip-placement="top"
+          <div uib-tooltip="Lipputulo + nettohinta" tooltip-placement="top"
                tooltip-append-to-body="true">
             Brutto&nbsp;<span class="text-info small glyphicon glyphicon-question-sign"></span>
           </div>
